[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parkbot"
version = "0.1.0"
description = "Auto-book Assago parking via Cognito API"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "playwright>=1.49",
  "python-telegram-bot>=21.0",
  "structlog>=24.4",
]

[project.scripts]
parkbot = "parkbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
